# traveller-rpg-combat

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
docs/: Gemfile  _config.yml  about.md  index.md  personal.md
docs/_layouts/: default.html
notebooks/: 01_personal_combat.ipynb
src/: dice.py
