[project]
name = "traveller-rpg-combat"
version = "0.1.0"
description = "Combat Encounter Simulations and Balancing for Traveller RPG."
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.12"
authors = [{ name = "Matt Gosden", email = "mdgosden@gmail.com" }]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I"]
